--- a/promos.html
+++ b/promos.html
@@ -68,16 +68,16 @@ header h1, #menu-title { text-align:center; margin:.25rem 0; }
 	<header>
     <img src="https://cdn7.kiwilimon.com/recetaimagen/2806/960x640/25790.jpg.jpg" alt="Salvadorean Bites" class="logo" />
     <nav aria-label="Navegación principal">
-      <a href="quienes-somos">Quiénes Somos</a>
-      <a href="Index.html" >Menú</a>
-      <a href="promos">Promociones</a>
-      <a href="galeria">Galería</a>
-      <a href="contacto">Contáctanos</a>
+      <a href="index.html" >Menú</a>
+      <a href="galeria.html">Galería</a>
+      <a href="quienes-somos.html"aria-current="page" >Conócenos</a>
+      <a href="promos.html">Promociones</a>
+      <a href="contacto.html">Contáctanos</a>
     </nav>
     <h1>Salvadorean Bites</h1>
     <p>Fresh. Local. Tasty.</p>
   </header>
-
+    
 <section id="promociones" class="container">
   <h2>Promociones</h2>
   <p class="text-center mb-5">En nuestro restaurante creemos que compartir el sabor de El Salvador debe ser accesible para todos. Por eso, cada semana te traemos promociones especiales pensadas para consentirte y celebrar nuestras tradiciones.</p>
@@ -134,6 +134,7 @@ header h1, #menu-title { text-align:center; margin:.25rem 0; }
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
